--- a/HolisticJourney/package.json
+++ b/HolisticJourney/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4"
+    "react-native": "0.57.4",
+    "react-native-material-textfield": "^0.12.0",
+    "react-native-tabbar-bottom": "^1.0.4",
+    "react-navigation": "^2.18.2"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
