--- a/HolisticJourney/ios/Podfile
+++ b/HolisticJourney/ios/Podfile
@@ -14,6 +14,8 @@ pod 'Crashlytics', '~> 3.10.7'
   target 'HolisticJourney-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
+    pod 'Picker', :path => '../node_modules/react-native-picker'
+
   end
 
   target 'HolisticJourneyTests' do
