--- a/HolisticJourney/package.json
+++ b/HolisticJourney/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.57.4",
     "react-native-animatable": "^1.3.0",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-picker": "^4.3.7",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
