--- a/HolisticJourney/package.json
+++ b/HolisticJourney/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "native-base": "^2.8.1",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-animatable": "^1.3.0",
+    "react-native-keyboard-aware-scrollview": "^2.0.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-picker": "^4.3.7",
     "react-navigation": "^2.18.2"
