--- a/HolisticJourney/package.json
+++ b/HolisticJourney/package.json
@@ -14,7 +14,7 @@
     "react-native-animatable": "^1.3.0",
     "react-native-keyboard-aware-scrollview": "^2.0.0",
     "react-native-material-textfield": "^0.12.0",
-    "react-native-picker": "^4.3.7",
+    "react-native-picker-select": "^5.0.1",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
